[gd_scene load_steps=7 format=3 uid="uid://dyg348boebyg7"]

[ext_resource type="Script" path="res://entities/test_portal.gd" id="1_fgear"]
[ext_resource type="Texture2D" uid="uid://drg2kkkrnxtc0" path="res://assets/programmer_art/pixel.png" id="2_bw3gt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uvpj"]
size = Vector2(5, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmyp8"]
size = Vector2(2.5, 5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2homg"]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_axqr4"]
blend_mode = 2

[node name="BasePortal" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_fgear")

[node name="PortalCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8uvpj")
debug_color = Color(0.317647, 0.764706, 0.980392, 0.419608)

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(20, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -18.75)
rotation = -1.5708
shape = SubResource("RectangleShape2D_vmyp8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 18.75)
rotation = -1.5708
shape = SubResource("RectangleShape2D_vmyp8")

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("CanvasItemMaterial_2homg")
color = Color(0, 0, 0, 1)
energy = 16.0
texture = ExtResource("2_bw3gt")
texture_scale = 50.0

[node name="SpecialSpriteGroup" type="CanvasGroup" parent="."]
clip_children = 1

[node name="Mask" type="Sprite2D" parent="SpecialSpriteGroup"]
material = SubResource("CanvasItemMaterial_axqr4")
scale = Vector2(200, 200)
texture = ExtResource("2_bw3gt")
offset = Vector2(-0.5, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
